errores
/home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c: In function 'nuevo_activate_plugin':
/home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c:60:37: error: 'SPIN_LOCK_UNLOCKED' undeclared (first use in this function)
                 state->queue_lock = SPIN_LOCK_UNLOCKED;
                                     ^~~~~~~~~~~~~~~~~~
/home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c:60:37: note: each undeclared identifier is reported only once for each function it appears in
/home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c: In function 'nuevo_task_exit':
/home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c:217:44: error: 'struct cpu_state' has no member named 'local_queues'
         spin_unlock_irqrestore(&local_state->local_queues.ready_lock, flags);
                                            ^~
/home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c: In function 'nuevo_read':
/home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c:271:31: error: conflicting types for 'cpu'
     char kbuf[MAX_SIZE]; char cpu[] = "CPU     NUM_SCUEDULES";
                               ^~~
/home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c:269:9: note: previous declaration of 'cpu' was here
     int cpu, read = 0;
         ^~~
/home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c:275:13: warning: passing argument 1 of 'strncpy' makes pointer from integer without a cast [-Wint-conversion]
     strncpy(kbuf[read],cpu,strlen((const char*)cpu));
             ^~~~
In file included from ./include/linux/bitmap.h:8:0,
                 from ./include/linux/cpumask.h:11,
                 from ./arch/x86/include/asm/cpumask.h:4,
                 from ./arch/x86/include/asm/msr.h:10,
                 from ./arch/x86/include/asm/processor.h:20,
                 from ./arch/x86/include/asm/cpufeature.h:4,
                 from ./arch/x86/include/asm/thread_info.h:52,
                 from ./include/linux/thread_info.h:58,
                 from ./arch/x86/include/asm/preempt.h:6,
                 from ./include/linux/preempt.h:59,
                 from ./include/linux/spinlock.h:50,
                 from ./include/linux/seqlock.h:35,
                 from ./include/linux/time.h:5,
                 from ./include/linux/stat.h:18,
                 from ./include/linux/module.h:10,
                 from /home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c:1:
./include/linux/string.h:24:15: note: expected 'char *' but argument is of type 'char'
 extern char * strncpy(char *,const char *, __kernel_size_t);
               ^~~~~~~
In file included from ./arch/x86/include/asm/cpumask.h:4:0,
                 from ./arch/x86/include/asm/msr.h:10,
                 from ./arch/x86/include/asm/processor.h:20,
                 from ./arch/x86/include/asm/cpufeature.h:4,
                 from ./arch/x86/include/asm/thread_info.h:52,
                 from ./include/linux/thread_info.h:58,
                 from ./arch/x86/include/asm/preempt.h:6,
                 from ./include/linux/preempt.h:59,
                 from ./include/linux/spinlock.h:50,
                 from ./include/linux/seqlock.h:35,
                 from ./include/linux/time.h:5,
                 from ./include/linux/stat.h:18,
                 from ./include/linux/module.h:10,
                 from /home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c:1:
./include/linux/cpumask.h:223:13: error: assignment to expression with array type
  for ((cpu) = -1;    \
             ^
./include/linux/cpumask.h:717:36: note: in expansion of macro 'for_each_cpu'
 #define for_each_online_cpu(cpu)   for_each_cpu((cpu), cpu_online_mask)
                                    ^~~~~~~~~~~~
/home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c:278:5: note: in expansion of macro 'for_each_online_cpu'
     for_each_online_cpu(cpu){
     ^~~~~~~~~~~~~~~~~~~
./include/linux/cpumask.h:224:24: warning: passing argument 1 of 'cpumask_next' makes integer from pointer without a cast [-Wint-conversion]
   (cpu) = cpumask_next((cpu), (mask)), \
                        ^
./include/linux/cpumask.h:717:36: note: in expansion of macro 'for_each_cpu'
 #define for_each_online_cpu(cpu)   for_each_cpu((cpu), cpu_online_mask)
                                    ^~~~~~~~~~~~
/home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c:278:5: note: in expansion of macro 'for_each_online_cpu'
     for_each_online_cpu(cpu){
     ^~~~~~~~~~~~~~~~~~~
./include/linux/cpumask.h:188:28: note: expected 'int' but argument is of type 'char *'
 static inline unsigned int cpumask_next(int n, const struct cpumask *srcp)
                            ^~~~~~~~~~~~
./include/linux/cpumask.h:224:9: error: assignment to expression with array type
   (cpu) = cpumask_next((cpu), (mask)), \
         ^
./include/linux/cpumask.h:717:36: note: in expansion of macro 'for_each_cpu'
 #define for_each_online_cpu(cpu)   for_each_cpu((cpu), cpu_online_mask)
                                    ^~~~~~~~~~~~
/home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c:278:5: note: in expansion of macro 'for_each_online_cpu'
     for_each_online_cpu(cpu){
     ^~~~~~~~~~~~~~~~~~~
./include/linux/cpumask.h:225:9: warning: comparison between pointer and integer
   (cpu) < nr_cpu_ids;)
         ^
./include/linux/cpumask.h:717:36: note: in expansion of macro 'for_each_cpu'
 #define for_each_online_cpu(cpu)   for_each_cpu((cpu), cpu_online_mask)
                                    ^~~~~~~~~~~~
/home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c:278:5: note: in expansion of macro 'for_each_online_cpu'
     for_each_online_cpu(cpu){
     ^~~~~~~~~~~~~~~~~~~
./include/linux/cpumask.h:224:38: warning: left-hand operand of comma expression has no effect [-Wunused-value]
   (cpu) = cpumask_next((cpu), (mask)), \
                                      ^
./include/linux/cpumask.h:717:36: note: in expansion of macro 'for_each_cpu'
 #define for_each_online_cpu(cpu)   for_each_cpu((cpu), cpu_online_mask)
                                    ^~~~~~~~~~~~
/home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c:278:5: note: in expansion of macro 'for_each_online_cpu'
     for_each_online_cpu(cpu){
     ^~~~~~~~~~~~~~~~~~~
In file included from ./include/linux/compiler.h:58:0,
                 from ./include/uapi/linux/stddef.h:1,
                 from ./include/linux/stddef.h:4,
                 from ./include/uapi/linux/posix_types.h:4,
                 from ./include/uapi/linux/types.h:13,
                 from ./include/linux/types.h:5,
                 from ./include/linux/list.h:4,
                 from ./include/linux/module.h:9,
                 from /home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c:1:
./include/asm-generic/percpu.h:20:44: error: array subscript is not an integer
 #define per_cpu_offset(x) (__per_cpu_offset[x])
                                            ^
./include/linux/compiler-gcc.h:53:26: note: in definition of macro 'RELOC_HIDE'
  (typeof(ptr)) (__ptr + (off));     \
                          ^~~
./include/linux/percpu-defs.h:223:2: note: in expansion of macro 'SHIFT_PERCPU_PTR'
  SHIFT_PERCPU_PTR((ptr), per_cpu_offset((cpu)));   \
  ^~~~~~~~~~~~~~~~
./include/linux/percpu-defs.h:223:26: note: in expansion of macro 'per_cpu_offset'
  SHIFT_PERCPU_PTR((ptr), per_cpu_offset((cpu)));   \
                          ^~~~~~~~~~~~~~
./include/linux/percpu-defs.h:256:29: note: in expansion of macro 'per_cpu_ptr'
 #define per_cpu(var, cpu) (*per_cpu_ptr(&(var), cpu))
                             ^~~~~~~~~~~
/home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c:47:35: note: in expansion of macro 'per_cpu'
 #define cpu_state_for(cpu_id)   (&per_cpu(cpu_state, cpu_id))
                                   ^~~~~~~
/home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c:279:23: note: in expansion of macro 'cpu_state_for'
         local_state = cpu_state_for(cpu);
                       ^~~~~~~~~~~~~
/home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c:281:29: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
         strncpy(&kbuf[read],(char*)local_state->cpu,strlen((const char*)sp));
                             ^
make[2]: *** [/home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.o] Error 1
make[1]: *** [_module_/home/bench/Carlos/plugins/plugin_sketch] Error 2
make: *** [all] Error 2
